# project-1

./: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.h  CommaAutomaton.cpp  CommaAutomaton.h  EOFAutomaton.h  FactsAutomaton.h  IDAutomaton.cpp  IDAutomaton.h  LeftParenAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MultiplyAutomaton.h  PeriodAutomaton.h  Q_MarkAutomaton.h  QueriesAutomaton.h  RightParenAutomaton.cpp  RightParenAutomaton.h  RulesAutomaton.h  SchemesAutomaton.cpp  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h  in10.txt  lab1  main.cpp
Automata/: AddAutomaton.cpp  AddAutomaton.h  Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommaAutomaton.h  EOFAutomaton.h  FactsAutomaton.cpp  FactsAutomaton.h  IDAutomaton.h  LeftParenAutomaton.cpp  LeftParenAutomaton.h  LineCommentAutomaton.h  MultiplyAutomaton.cpp  MultiplyAutomaton.h  PeriodAutomaton.cpp  PeriodAutomaton.h  Q_MarkAutomaton.cpp  Q_MarkAutomaton.h  QueriesAutomaton.cpp  QueriesAutomaton.h  RightParenAutomaton.h  RulesAutomaton.cpp  RulesAutomaton.h  SchemesAutomaton.h  StringAutomaton.cpp  StringAutomaton.h  UndefinedAutomaton.cpp  UndefinedAutomaton.h
